--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Target Tabungan</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHTTwrAZ3uK9PEQzHBw5LqV4obz4QvYd3DnGULTU50W6w6q8rRC28c9Q8z" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container">
+    <h1>Target Tabungan</h1>
+    <hr>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Progress" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+        <span class="progress-value">9.300.000 / 14.300.000</span>
+      </div>
+    </div>
+    <hr>
+    <h3>Target: Iphone 15</h3>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-OgW6QbszKJoIC2Y0604Q4lL44fXj4n9eiQf7tmW0W51zYfN9/AaykQMAhQ" crossorigin="anonymous"></script>
+</body>
+</html>
