--- a/index.html
+++ b/index.html
@@ -1,24 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Target Tabungan</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHTTwrAZ3uK9PEQzHBw5LqV4obz4QvYd3DnGULTU50W6w6q8rRC28c9Q8z" crossorigin="anonymous">
+    <title>Portofolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Target Tabungan</h1>
-    <hr>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Progress" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
-        <span class="progress-value">9.300.000 / 14.300.000</span>
-      </div>
-    </div>
-    <hr>
-    <h3>Target: Iphone 15</h3>
-  </div>
+    <!-- Header -->
+    <header class="text-center">
+        <img src="profile.jpg" alt="Profile Picture" class="rounded-circle" width="200">
+        <h1>Nama Anda</h1>
+    </header>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-OgW6QbszKJoIC2Y0604Q4lL44fXj4n9eiQf7tmW0W51zYfN9/AaykQMAhQ" crossorigin="anonymous"></script>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Portofolio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#visi-misi">Visi dan Misi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#riwayat-project">Riwayat Project</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#daftar-klien">Daftar Klien</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Content -->
+    <div class="container">
+        <!-- Visi dan Misi -->
+        <section id="visi-misi">
+            <h2>Visi dan Misi</h2>
+            <p>Visi: Menjadi profesional terbaik di bidangnya.</p>
+            <p>Misi: Memberikan solusi terbaik untuk setiap tantangan yang dihadapi.</p>
+        </section>
+
+        <!-- Riwayat Project -->
+        <section id="riwayat-project">
+            <h2>Riwayat Project</h2>
+            <!-- Tambahkan detail project Anda di sini -->
+        </section>
+
+        <!-- Daftar Klien -->
+        <section id="daftar-klien">
+            <h2>Daftar Klien</h2>
+            <!-- Tambahkan daftar klien Anda di sini -->
+        </section>
+    </div>
+
+    <!-- Footer -->
+    <footer class="text-center">
+        <p>© 2024 Nama Anda</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
