--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -303,7 +303,7 @@
         <div class="container">
         <h2 class="section-title animate__animated animate__fadeInUp">Mitra</h2>
         <div class="row animate__animated animate__fadeInLeft">
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m9.png" style="width:100%">
@@ -311,7 +311,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m10.png" style="width:100%">
@@ -319,7 +319,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m12.png" style="width:100%">
@@ -327,7 +327,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m11.png" style="width:100%">
@@ -335,7 +335,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m1.png" style="width:100%">
@@ -344,7 +344,7 @@
                 </div>
             </div>
         
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m2.png" style="width:100%">
@@ -352,7 +352,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card h-200">
                     <div class="card-body">
                         <img src="img/m3.png" style="width:100%">
@@ -360,7 +360,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m4.png" style="width:100%">
@@ -368,7 +368,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m5.png" style="width:100%">
@@ -376,7 +376,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m6.png" style="width:100%">
@@ -384,7 +384,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m7.png" style="width:100%">
@@ -393,7 +393,7 @@
                 </div>
             </div>
          
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 col-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/m8.png" style="width:100%">
