--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
 <p></p>
     <!-- Footer -->
-    <footer class="footer" id="contact">
+    <footer class="footer container" id="contact">
         <p><i>"Smart Tech, Smarter Business"</i></p>
         <p>&copy; 2024 <strong>DANZ ID TECH | JASA PEMBUATAN APLIAKSI dan WEBSITE </strong>. All rights reserved.</p>
     </footer>
