--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
 
  /* CSS untuk section klien */
  #clients .card {
+    background-color: #ffffff;
             width: 100%;
             height: 100%;
+            object-position: center;
         }
         #clients .card-body {
             padding: 20px;
@@ -84,7 +86,7 @@
         #clients .card img {
             max-width: 80%;
             max-height: 80%;
-            object-position: center;
+            
             object-fit: contain;
             
         }
