--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DaNz Pratama Teknologi</title>
+    <title>DaNz ID Tech | Jasa Pembuatan Website dan Aplikasi Professional</title>
+    <meta name="description" content="DaNz Pratama Teknologi menawarkan jasa pembuatan aplikasi dan website di daerah Tasikmalaya dengan harga terjangkau dan bersaing. Kami berfokus pada pengembangan solusi IT inovatif.">
+    <meta name="keywords" content="DaNz Pratama Teknologi, Teknologi, Solusi IT, Inovasi, Jasa Pembuatan Aplikasi, Jasa Pembuatan Website, Tasikmalaya, Harga Terjangkau, Harga Bersaing">
+    <meta name="author" content="Dandi Mohamad Pratama,S. Kom">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
