--- a/syarat-ketentuan/index.html
+++ b/syarat-ketentuan/index.html
@@ -135,73 +135,81 @@
 
 <body>
     <div class="container">
+        <div class="alert alert-warning" role="alert">
+            <strong>Peringatan:</strong> Semua yang menjadi mitra kami, baik klien lama maupun baru, diharapkan untuk
+            mengikuti dan patuh terhadap syarat dan ketentuan yang berlaku. Perjanjian lama tetap berlaku namun
+            diikuti oleh ketentuan yang baru.
+        </div>
         <h1 class="mt-5 mb-4">Syarat dan Ketentuan Freelancer Web Developer</h1>
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <ol>
-                    <li>Pembayaran
+                    <li><strong>Pembayaran</strong>
                         <ul>
-                            <li>Deposit Awal: Klien diwajibkan membayar deposit minimal 50% dari total biaya proyek sebelum
-                                pekerjaan dimulai.</li>
-                            <li>Pelunasan: Sisa pembayaran harus dilunasi segera setelah proyek selesai dan sebelum
-                                penyerahan akhir hasil pekerjaan.</li>
-                            <li>Tidak Ada Kredit: Semua pembayaran harus dilakukan tepat waktu. Tidak ada pembayaran
-                                yang diangsur atau hutang yang diizinkan.</li>
-                            <li>Penangguhan Layanan: Jika pelunasan belum dilakukan setelah proyek selesai, freelancer
-                                berhak menangguhkan atau menonaktifkan layanan sampai pembayaran penuh diterima.</li>
+                            <li><strong>Deposit Awal:</strong> Klien diwajibkan membayar deposit minimal 50% dari total
+                                biaya proyek sebelum pekerjaan dimulai.</li>
+                            <li><strong>Pelunasan:</strong> Sisa pembayaran harus dilunasi segera setelah proyek selesai
+                                dan sebelum penyerahan akhir hasil pekerjaan.</li>
+                            <li><strong>Tidak Ada Kredit:</strong> Semua pembayaran harus dilakukan tepat waktu. Tidak
+                                ada pembayaran yang diangsur atau hutang yang diizinkan.</li>
+                            <li><strong>Penangguhan Layanan:</strong> Jika pelunasan belum dilakukan setelah proyek
+                                selesai, freelancer berhak menangguhkan atau menonaktifkan layanan sampai pembayaran
+                                penuh diterima.</li>
                         </ul>
                     </li>
-                    <li>Biaya Hosting
+                    <li><strong>Biaya Hosting</strong>
                         <ul>
-                            <li>Pembayaran Awal: Klien harus membayar biaya hosting 100% di muka sebelum layanan hosting
-                                diaktifkan.</li>
+                            <li><strong>Pembayaran Awal:</strong> Klien harus membayar biaya hosting 100% di muka
+                                sebelum layanan hosting diaktifkan.</li>
                         </ul>
                     </li>
-                    <li>Cakupan Pekerjaan
+                    <li><strong>Cakupan Pekerjaan</strong>
                         <ul>
-                            <li>Spesifikasi Proyek: Semua detail proyek harus disetujui oleh kedua belah pihak sebelum
-                                pekerjaan dimulai.</li>
-                            <li>Perubahan Proyek: Perubahan atau tambahan pada proyek yang sudah disepakati akan
-                                dikenakan biaya tambahan sesuai dengan tingkat kerumitan dan waktu yang diperlukan.</li>
+                            <li><strong>Spesifikasi Proyek:</strong> Semua detail proyek harus disetujui oleh kedua belah
+                                pihak sebelum pekerjaan dimulai.</li>
+                            <li><strong>Perubahan Proyek:</strong> Perubahan atau tambahan pada proyek yang sudah
+                                disepakati akan dikenakan biaya tambahan sesuai dengan tingkat kerumitan dan waktu yang
+                                diperlukan.</li>
                         </ul>
                     </li>
-                    <li>Hak Kekayaan Intelektual
+                    <li><strong>Hak Kekayaan Intelektual</strong>
                         <ul>
-                            <li>Kepemilikan: Hak atas hasil pekerjaan akan sepenuhnya menjadi milik klien setelah
-                                pembayaran penuh diterima.</li>
-                            <li>Penggunaan Portofolio: Freelancer berhak menggunakan hasil pekerjaan sebagai portofolio
-                                kecuali ada kesepakatan tertulis yang menyatakan sebaliknya.</li>
+                            <li><strong>Kepemilikan:</strong> Hak atas hasil pekerjaan akan sepenuhnya menjadi milik
+                                klien setelah pembayaran penuh diterima.</li>
+                            <li><strong>Penggunaan Portofolio:</strong> Freelancer berhak menggunakan hasil pekerjaan
+                                sebagai portofolio kecuali ada kesepakatan tertulis yang menyatakan sebaliknya.</li>
                         </ul>
                     </li>
-                    <li>Waktu Penyelesaian
+                    <li><strong>Waktu Penyelesaian</strong>
                         <ul>
-                            <li>Estimasi Waktu: Estimasi waktu penyelesaian proyek akan diberikan setelah spesifikasi
-                                proyek disepakati.</li>
-                            <li>Keterlambatan: Setiap keterlambatan yang disebabkan oleh klien, termasuk keterlambatan
-                                dalam memberikan informasi atau bahan yang diperlukan, akan memperpanjang waktu
-                                penyelesaian proyek.</li>
+                            <li><strong>Estimasi Waktu:</strong> Estimasi waktu penyelesaian proyek akan diberikan
+                                setelah spesifikasi proyek disepakati.</li>
+                            <li><strong>Keterlambatan:</strong> Setiap keterlambatan yang disebabkan oleh klien, termasuk
+                                keterlambatan dalam memberikan informasi atau bahan yang diperlukan, akan memperpanjang
+                                waktu penyelesaian proyek.</li>
                         </ul>
                     </li>
-                    <li>Pembatalan Proyek
+                    <li><strong>Pembatalan Proyek</strong>
                         <ul>
-                            <li>Inisiatif Klien: Jika klien membatalkan proyek setelah deposit dibayarkan, deposit tidak
-                                akan dikembalikan.</li>
-                            <li>Inisiatif Freelancer: Jika freelancer membatalkan proyek, deposit akan dikembalikan
-                                sepenuhnya kepada klien.</li>
+                            <li><strong>Inisiatif Klien:</strong> Jika klien membatalkan proyek setelah deposit
+                                dibayarkan, deposit tidak akan dikembalikan.</li>
+                            <li><strong>Inisiatif Freelancer:</strong> Jika freelancer membatalkan proyek, deposit akan
+                                dikembalikan sepenuhnya kepada klien.</li>
                         </ul>
                     </li>
-                    <li>Kerjasama dan Komunikasi
+                    <li><strong>Kerjasama dan Komunikasi</strong>
                         <ul>
-                            <li>Responsif: Klien diharapkan memberikan respon cepat terhadap permintaan informasi atau
-                                klarifikasi selama proyek berlangsung.</li>
-                            <li>Saluran Komunikasi: Komunikasi resmi antara klien dan freelancer akan dilakukan melalui
-                                email atau platform komunikasi yang disepakati.</li>
+                            <li><strong>Responsif:</strong> Klien diharapkan memberikan respon cepat terhadap permintaan
+                                informasi atau klarifikasi selama proyek berlangsung.</li>
+                            <li><strong>Saluran Komunikasi:</strong> Komunikasi resmi antara klien dan freelancer akan
+                                dilakukan melalui email atau platform komunikasi yang disepakati.</li>
                         </ul>
                     </li>
-                    <li>Kerahasiaan
+                    <li><strong>Kerahasiaan</strong>
                         <ul>
-                            <li>Informasi Rahasia: Semua informasi yang diberikan oleh klien akan dianggap rahasia dan
-                                tidak akan dibagikan kepada pihak ketiga tanpa izin tertulis dari klien.</li>
+                            <li><strong>Informasi Rahasia:</strong> Semua informasi yang diberikan oleh klien akan
+                                dianggap rahasia dan tidak akan dibagikan kepada pihak ketiga tanpa izin tertulis dari
+                                klien.</li>
                         </ul>
                     </li>
                 </ol>
