--- a/syarat-ketentuan/index.html
+++ b/syarat-ketentuan/index.html
@@ -126,7 +126,7 @@
 
     <!-- Header -->
     <header class="header" id="profile">
-        <img src="./img/me.jpg" alt="Profile Picture" class="profile-pic animate__animated animate__bounceIn">
+        <img src="/img/me.jpg" alt="Profile Picture" class="profile-pic animate__animated animate__bounceIn">
         <h1 class="animate__animated animate__fadeInUp">Dandi Mohamad Pratama, S.Kom</h1>
         <a href="path/to/your-cv.pdf" class="btn btn-primary animate__animated animate__fadeInUp" download>Download CV</a>
         
