--- a/syarat-ketentuan/index.html
+++ b/syarat-ketentuan/index.html
@@ -170,6 +170,8 @@
                             <li><strong>Perubahan Proyek:</strong> Perubahan atau tambahan pada proyek yang sudah
                                 disepakati akan dikenakan biaya tambahan sesuai dengan tingkat kerumitan dan waktu yang
                                 diperlukan.</li>
+                             <li><strong>OnSite:</strong> Biaya tambahan akan dikenakan jika pekerjaan memerlukan kunjungan
+                                OnSite (pergi ke tempat klien).</li>
                         </ul>
                     </li>
                     <li><strong>Hak Kekayaan Intelektual</strong>
