--- a/syarat-ketentuan/index.html
+++ b/syarat-ketentuan/index.html
@@ -178,7 +178,7 @@
                         <ul>
                             <li><strong>Kepemilikan:</strong> Hak atas hasil pekerjaan akan sepenuhnya menjadi milik
                                 klien setelah pembayaran penuh diterima.</li>
-                            <li><strong>Akun Cpanel / Hosting</strong> : Jika klien meminta akun cpanel atau hosting, maka kami anggap jika ada error bukan tanggung kami dan sudah bukan bagian mitra kami, dan dikenakan biaya Rp.1 Juta jika ingin alih mitra</li>
+                            <li><strong>Akun Cpanel / Hosting</strong> : Jika klien meminta akun cpanel atau hosting, maka kami anggap jika ada error bukan tanggung jawab kami dan sudah bukan bagian mitra kami, dan akan dikenakan biaya Rp.1 Juta jika ingin alih mitra.</li>
                             <li><strong>Penggunaan Portofolio:</strong> Freelancer berhak menggunakan hasil pekerjaan
                                 sebagai portofolio kecuali ada kesepakatan tertulis yang menyatakan sebaliknya.</li>
                         </ul>
