--- a/syarat-ketentuan/index.html
+++ b/syarat-ketentuan/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DaNz ID Tech | Jasa Pembuatan Website dan Aplikasi Professional</title>
+    <title>Syarat dan Ketentuan - DaNz ID Tech</title>
     <meta name="description" content="DaNz Pratama Teknologi menawarkan jasa pembuatan aplikasi dan website di daerah Tasikmalaya dengan harga terjangkau dan bersaing. Kami berfokus pada pengembangan solusi IT inovatif.">
     <meta name="keywords" content="DaNz Pratama Teknologi, Teknologi, Solusi IT, Inovasi, Jasa Pembuatan Aplikasi, Jasa Pembuatan Website, Tasikmalaya, Harga Terjangkau, Harga Bersaing">
     <meta name="author" content="Dandi Mohamad Pratama,S. Kom">
