--- a/dashboard_agung.html
+++ b/dashboard_agung.html
@@ -23,19 +23,21 @@
                 <img src="profile-default.png" alt="Profile" class="w-20 h-20 rounded-full">
                 <div>
                     <p class="text-2xl font-bold text-blue-700 animate-fadeIn">Agung Nugraha</p>
-                    <h1 class="text-3xl font-extrabold text-gray-700 mt-2">Saldo: <span class="text-blue-600">Rp 10.000</span></h1>
+                    <h1 class="text-3xl font-extrabold text-gray-700 mt-2">Saldo: <span class="text-blue-600">Rp 50.000</span></h1>
                 </div>
             </div>
         </div>
 
-        <!-- Tombol Setor dan Tarik Tunai -->
+        <!-- Tombol Setor, Tarik Tunai, Misi, dan Keluar -->
         <div class="flex space-x-4 mt-4">
             <button id="setorBtn" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 focus:outline-none">Setor Tunai</button>
             <button id="tarikBtn" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 focus:outline-none">Tarik Tunai</button>
+            <button id="misiBtn" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 focus:outline-none">Misi Oktober</button>
+<!--             <button id="keluarBtn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:outline-none">Keluar</button> -->
         </div>
 
         <!-- Pop-up Info -->
-        <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
+        <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center">
             <div class="bg-white p-6 rounded-lg shadow-lg w-80 text-center animate-modalIn">
                 <h2 id="modalTitle" class="text-xl font-bold mb-4">Info</h2>
                 <p id="modalText" class="text-gray-700 mb-6">Informasi transaksi.</p>
@@ -43,10 +45,63 @@
             </div>
         </div>
 
+     <!-- Modal Misi -->
+     <div id="misiModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-96 text-center animate-modalIn">
+            <h2 class="text-xl font-bold mb-4">Misi dan Poin</h2>
+
+            <!-- Tabel Misi -->
+            <table class="min-w-full table-auto">
+                <thead>
+                    <tr>
+                        <th class="px-4 py-2 text-left font-bold">Misi</th>
+                        <th class="px-4 py-2 text-left font-bold">Poin</th>
+                        <th class="px-4 py-2 text-left font-bold">Catatan</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="2" class="border px-4 py-2">Note</td>
+                        <td class="border px-4 py-2">Poin hanya bisa didapatkan setelah setor tunai pertama minimal Rp 10.000</td>
+                    </tr>
+                    <tr>
+                        <td class="border px-4 py-2">Misi 1: Come and Play</td>
+                        <td class="border px-4 py-2 text-green-500">+1000</td>
+                        <td class="border px-4 py-2">Max 5 hari</td>
+                    </tr>
+                    <tr>
+                        <td class="border px-4 py-2">Misi 2: Night sleep</td>
+                        <td class="border px-4 py-2 text-green-500">+10.000</td>
+                        <td class="border px-4 py-2">2x/minggu</td>
+                    </tr>
+                    <tr>
+                        <td class="border px-4 py-2">Misi 3: Secret Activity</td>
+                        <td class="border px-4 py-2 text-green-500">+10.000</td>
+                        <td class="border px-4 py-2">1x/minggu</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- Tombol Tutup -->
+            <button id="closeMisiBtn" class="mt-4 bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 focus:outline-none">Tutup</button>
+        </div>
+    </div>
+</div>
+
         <!-- Riwayat Transaksi Section -->
         <div class="mt-10 bg-white p-6 rounded-lg shadow-lg transition-all duration-500 ease-out hover:shadow-2xl">
             <h2 class="text-2xl font-semibold text-gray-700 border-b-2 border-blue-500 pb-2">Riwayat Transaksi</h2>
             <ul class="mt-4 space-y-4">
+                <li class="flex justify-between items-center">
+                    <span class="text-gray-600">20 September 2024</span>
+                    <span class="text-gray-700">Secret Bonus</span>
+                    <span class="text-green-500 font-semibold">+ Rp 50.000</span>
+                </li>
+                <li class="flex justify-between items-center">
+                    <span class="text-gray-600">06 September 2024</span>
+                    <span class="text-gray-700">Tarik Tunai</span>
+                    <span class="text-red-500 font-semibold">+ Rp 10.000</span>
+                </li>
                 <li class="flex justify-between items-center">
                     <span class="text-gray-600">04 September 2024</span>
                     <span class="text-gray-700">Setor Tunai</span>
@@ -99,6 +154,9 @@
         const setorBtn = document.getElementById('setorBtn');
         const tarikBtn = document.getElementById('tarikBtn');
         const closeBtn = document.getElementById('closeBtn');
+        const misiBtn = document.getElementById('misiBtn');
+        const misiModal = document.getElementById('misiModal');
+        const closeMisiBtn = document.getElementById('closeMisiBtn');
 
         // Setor Tunai button click
         setorBtn.addEventListener('click', () => {
@@ -114,9 +172,18 @@
             modal.classList.remove('hidden');
         });
 
-        // Close button click
+        // Misi button click
+        misiBtn.addEventListener('click', () => {
+            misiModal.classList.remove('hidden');
+        });
+
+        // Close buttons
         closeBtn.addEventListener('click', () => {
             modal.classList.add('hidden');
+        });
+
+        closeMisiBtn.addEventListener('click', () => {
+            misiModal.classList.add('hidden');
         });
     </script>
 </body>
