--- a/dashboard_gilang.html
+++ b/dashboard_gilang.html
@@ -32,7 +32,7 @@
         <div class="flex space-x-4 mt-4">
             <button id="setorBtn" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 focus:outline-none">Setor Tunai</button>
             <button id="tarikBtn" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 focus:outline-none">Tarik Tunai</button>
-            <button id="misiBtn" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 focus:outline-none">Misi</button>
+            <button id="misiBtn" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 focus:outline-none">Misi Oktober</button>
         </div>
 
         <!-- Pop-up Info -->
