--- a/dashboard_agung.html
+++ b/dashboard_agung.html
@@ -23,7 +23,7 @@
                 <img src="profile-default.png" alt="Profile" class="w-20 h-20 rounded-full">
                 <div>
                     <p class="text-2xl font-bold text-blue-700 animate-fadeIn">Agung Nugraha</p>
-                    <h1 class="text-3xl font-extrabold text-gray-700 mt-2">Saldo: <span class="text-blue-600">Rp 50.000</span></h1>
+                    <h1 class="text-3xl font-extrabold text-gray-700 mt-2">Saldo: <span class="text-blue-600">Rp 0</span></h1>
                 </div>
             </div>
         </div>
@@ -88,6 +88,10 @@
         <div class="mt-10 bg-white p-6 rounded-lg shadow-lg transition-all duration-500 ease-out hover:shadow-2xl">
             <h2 class="text-2xl font-semibold text-gray-700 border-b-2 border-blue-500 pb-2">Riwayat Transaksi</h2>
             <ul class="mt-4 space-y-4">
+                <li class="flex justify-between items-centerOktoberSeptember 2024</span>
+                    <span class="text-gray-700">Tarik Dana</span>
+                    <span class="text-red-500 font-semibold">- Rp 50.000</span>
+                </li>
                 <li class="flex justify-between items-center">
                     <span class="text-gray-600">20 September 2024</span>
                     <span class="text-gray-700">Secret Bonus</span>
