--- a/dashboard_gilang.html
+++ b/dashboard_gilang.html
@@ -23,7 +23,7 @@
                 <img src="profile-default.png" alt="Profile" class="w-20 h-20 rounded-full">
                 <div>
                     <p class="text-2xl font-bold text-blue-700 animate-fadeIn">Gilang</p>
-                    <h1 class="text-3xl font-extrabold text-gray-700 mt-2">Saldo: <span class="text-blue-600">Rp 25.000</span></h1>
+                    <h1 class="text-3xl font-extrabold text-gray-700 mt-2">Saldo: <span class="text-blue-600">Rp 50.000</span></h1>
                 </div>
             </div>
         </div>
@@ -49,6 +49,10 @@
             <h2 class="text-2xl font-semibold text-gray-700 border-b-2 border-blue-500 pb-2">Riwayat Transaksi</h2>
             <ul class="mt-4 space-y-4">
                 <li class="flex justify-between items-center">
+                    <span class="text-gray-600">06 Oktober 2024</span>
+                    <span class="text-gray-700">Setor Tunai</span>
+                    <span class="text-green-500 font-semibold">+ Rp 25.000</span>
+                </li>
                     <span class="text-gray-600">10 September 2024</span>
                     <span class="text-gray-700">Setor Tunai</span>
                     <span class="text-green-500 font-semibold">+ Rp 5.000</span>
