--- a/dashboard_agung.html
+++ b/dashboard_agung.html
@@ -32,7 +32,7 @@
         <div class="flex space-x-4 mt-4">
             <button id="setorBtn" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 focus:outline-none">Setor Tunai</button>
             <button id="tarikBtn" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 focus:outline-none">Tarik Tunai</button>
-            <button id="misiBtn" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 focus:outline-none">Misi Oktober</button>
+            <button id="misiBtn" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 focus:outline-none">Dapatkan Poin</button>
 <!--             <button id="keluarBtn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:outline-none">Keluar</button> -->
         </div>
 
@@ -64,15 +64,11 @@
                         <td colspan="2" class="border px-4 py-2">Note</td>
                         <td class="border px-4 py-2">Poin hanya bisa didapatkan setelah setor tunai pertama minimal Rp 10.000</td>
                     </tr>
-                    <tr>
-                        <td class="border px-4 py-2">Misi 1: Come and Play</td>
-                        <td class="border px-4 py-2 text-green-500">+1000</td>
-                        <td class="border px-4 py-2">Max 5 hari</td>
-                    </tr>
+                   
                     
                     <tr>
-                        <td class="border px-4 py-2">Misi 3: Secret Activity</td>
-                        <td class="border px-4 py-2 text-green-500">+10.000</td>
+                        <td class="border px-4 py-2">Misi 1: Sare</td>
+                        <td class="border px-4 py-2 text-green-500">+50.000</td>
                         <td class="border px-4 py-2">1x/minggu</td>
                     </tr>
                 </tbody>
