--- a/dashboard_agung.html
+++ b/dashboard_agung.html
@@ -67,7 +67,7 @@
                    
                     
                     <tr>
-                        <td class="border px-4 py-2">Misi 1: Sare</td>
+                        <td class="border px-4 py-2">Misi 1: Meting (Sare)</td>
                         <td class="border px-4 py-2 text-green-500">+50.000</td>
                         <td class="border px-4 py-2">1x/minggu</td>
                     </tr>
