--- a/index_test.html
+++ b/index_test.html
@@ -93,7 +93,7 @@
         <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
           <div class="company-badge mb-4">
             <i class="bi bi-gear-fill me-2"></i>
-            Berkomitmen untuk kesuksesan Anda
+            Dibawah PT. Pratama Sistem Indonesia
           </div>
 
           <h1 class="mb-4">
