--- a/index_test.html
+++ b/index_test.html
@@ -504,16 +504,19 @@
               }
             }
           </script>
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
-          </div>
+         <div class="swiper-slide"><img src="img/m9.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m10.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m12.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m11.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m1.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m2.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m3.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m4.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m5.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m6.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m7.png" class="img-fluid" alt=""></div>
+<div class="swiper-slide"><img src="img/m8.png" class="img-fluid" alt=""></div>
+
           <div class="swiper-pagination"></div>
         </div>
 
