--- a/index_test.html
+++ b/index_test.html
@@ -118,7 +118,7 @@
 
       <div class="col-lg-6">
         <div class="hero-image" data-aos="zoom-out" data-aos-delay="300">
-          <img src="assets/img/illustration-1.webp" alt="Hero Image" class="img-fluid">
+          <img src="assets/img/illustration-1.webp" alt="Hero Image" class="img-fluid" style="max-width: 100px;">
 
           <div class="customers-badge">
             <div class="customer-avatars">
@@ -312,7 +312,7 @@
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/portfolio-1.webp" alt="Website Perusahaan" class="img-fluid">
+                <img src="assets/img/portfolio-1.webp" alt="Website Perusahaan" class="img-fluid" style="max-width: 100px;">
               </div>
             </div>
           </div><!-- End tab content item -->
@@ -331,7 +331,7 @@
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/portfolio-2.webp" alt="E-commerce" class="img-fluid">
+                <img src="assets/img/portfolio-2.webp" alt="E-commerce" class="img-fluid" style="max-width: 100px;">
               </div>
             </div>
           </div><!-- End tab content item -->
@@ -350,7 +350,7 @@
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/portfolio-3.webp" alt="Blog CMS" class="img-fluid">
+                <img src="assets/img/portfolio-3.webp" alt="Blog CMS" class="img-fluid" style="max-width: 100px;">
               </div>
             </div>
           </div><!-- End tab content item -->
@@ -504,18 +504,18 @@
               }
             }
           </script>
-         <div class="swiper-slide"><img src="img/m9.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m10.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m12.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m11.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m1.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m2.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m3.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m4.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m5.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m6.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m7.png" class="img-fluid" alt=""></div>
-<div class="swiper-slide"><img src="img/m8.png" class="img-fluid" alt=""></div>
+         <div class="swiper-slide"><img src="img/m9.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m10.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m12.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m11.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m1.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m2.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m3.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m4.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m5.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m6.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m7.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
+<div class="swiper-slide"><img src="img/m8.png" class="img-fluid" style="max-width: 100px;" alt=""></div>
 
           <div class="swiper-pagination"></div>
         </div>
