--- a/index_test.html
+++ b/index_test.html
@@ -203,7 +203,7 @@
               <div class="profile d-flex align-items-center gap-3">
                 <img src="assets/img/avatar-1.webp" alt="CEO Profile" class="profile-image">
                 <div>
-                  <h4 class="profile-name">Mario Smith</h4>
+                  <h4 class="profile-name">Dandi Mohamad Pratama</h4>
                   <p class="profile-position">CEO &amp; Founder</p>
                 </div>
               </div>
@@ -213,7 +213,7 @@
                 <i class="bi bi-telephone-fill"></i>
                 <div>
                   <p class="contact-label">Hubungi kami kapan saja</p>
-                  <p class="contact-number">+123 456-789</p>
+                  <p class="contact-number">+62 822-1464-1824</p>
                 </div>
               </div>
             </div>
