--- a/index_test.html
+++ b/index_test.html
@@ -110,7 +110,7 @@
               <img src="assets/img/avatar-5.webp" alt="Customer 5" class="avatar">
               <span class="avatar more">12+</span>
             </div>
-            <p class="mb-0 mt-2">12,000+ klien yang puas dengan solusi web kami</p>
+            <p class="mb-0 mt-2">Puluhan klien yang puas dengan solusi web kami</p>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
           <div class="row gy-4">
             <div class="col-lg-5">
               <div class="profile d-flex align-items-center gap-3">
-                <img src="assets/img/avatar-1.webp" alt="CEO Profile" class="profile-image">
+                <img src="/img/profile.jpg" alt="CEO Profile" class="profile-image">
                 <div>
                   <h4 class="profile-name">Dandi Mohamad Pratama</h4>
                   <p class="profile-position">CEO &amp; Founder</p>
