--- a/index_test.html
+++ b/index_test.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>DaNz ID Tech | Jasa Pemrograman Web & Pengembangan Aplikasi | PT. Pratama Sistem Indonesia, Tasikmalaya</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+   <meta name="description" content="DaNz Pratama Teknologi menawarkan jasa pembuatan aplikasi dan website di daerah Tasikmalaya dengan harga terjangkau dan bersaing. Kami berfokus pada pengembangan solusi IT inovatif.">
+  <meta name="keywords" content="DaNz Pratama Teknologi, Teknologi, Solusi IT, Inovasi, Jasa Pembuatan Aplikasi, Jasa Pembuatan Website, Tasikmalaya, Harga Terjangkau, Harga Bersaing">
+  <meta name="author" content="Dandi Mohamad Pratama,S. Kom">
 
   <!-- Favicons -->
   <link href="/img/danz.png" rel="icon">
@@ -74,7 +75,7 @@
         <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
           <div class="company-badge mb-4">
             <i class="bi bi-gear-fill me-2"></i>
-            Dibawah PT. Pratama Sistem Indonesia
+           PT. Pratama Sistem Indonesia
           </div>
 
           <h1 class="mb-4">
