--- a/syarat-ketentuan/index.html
+++ b/syarat-ketentuan/index.html
@@ -49,8 +49,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/index.html#about">About</a></li>
           <li><a href="#">Syarat dan Ketentuan</a></li>
        
         </ul>
